--- a/Intial Modeling.ipynb
+++ b/Intial Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "76f9c57e-aad6-4d88-92f2-8e98d8e78ed5",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "import scipy.integrate as integ\n",
+    "from functions import *\n",
     "\n",
     "mpl.rc('xtick', direction='in', top=True)\n",
     "mpl.rc('ytick', direction='in', right=True)\n",
@@ -20,93 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "35a72396-5be9-4624-9bd7-689014dad2e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Basic Function Definitions\n",
-    "\n",
-    "def Q(deltaS, args):\n",
-    "    \"\"\"\n",
-    "    Defines q in the system of ODES\n",
-    "    \n",
-    "    Parameters:\n",
-    "        deltaS: array, values to solve over\n",
-    "        args: array of form: [beta, alpha, deltaT, H, k]\n",
-    "            all elements are floats\n",
-    "    \"\"\"\n",
-    "    return args[4]*(args[1]*args[2] - args[0]*deltaS)\n",
-    "\n",
-    "\n",
-    "def dS1dt(deltaS, args):\n",
-    "    \"\"\"\n",
-    "    Defines Equation 1 of the system of ODES\n",
-    "    \n",
-    "    Parameters:\n",
-    "        deltaS: array, values to solve over\n",
-    "        args: array of form: [beta, alpha, deltaT, H, k]\n",
-    "            all elements are floats\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    return -args[3] + np.absolute(Q(deltaS, args))*deltaS\n",
-    "\n",
-    "def dS2dt(deltaS, args):\n",
-    "    \"\"\"\n",
-    "    Defines Equation 2 of the system of ODES\n",
-    "    \n",
-    "    Parameters:\n",
-    "        deltaS: array, values to solve over\n",
-    "        args: array of form: [beta, alpha, deltaT, H, k]\n",
-    "            all elements are floats\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    return args[3] - np.absolute(Q(deltaS, args))*deltaS\n",
-    "\n",
-    "def DeltaSdt(deltaS, args):\n",
-    "    \"\"\"\n",
-    "    Defines the single equation ODE for Delta S rather than S1 and S2\n",
-    "    \n",
-    "    Parameters:\n",
-    "        deltaS: array, values to solve over\n",
-    "        args: array of form: [beta, alpha, deltaT, H, k]\n",
-    "            all elements are floats\n",
-    "    \"\"\"\n",
-    "    return dS2dt(deltaS, args) - dS1dt(deltaS,args)\n",
-    "\n",
-    "def AnalyticEQS(args):\n",
-    "    \"\"\"\n",
-    "    Takes the given parameters and calculates deltaS for the 3 equilibrium points. Returns None for any imaginary solutions given the parameters.\n",
-    "    \n",
-    "    Parameters:\n",
-    "        args: array of form: [beta, alpha, deltaT, H, k]\n",
-    "            all elements are floats\n",
-    "    Output:\n",
-    "        Array: [eqP1, eqP2, eqP3], all values are a float if solution is real or None if it is imaginary\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    radicand1 = 1/4 - args[3]*args[0]/(args[4]*args[1]**2*args[2]**2)\n",
-    "    radicand2 = 1/4 + args[3]*args[0]/(args[4]*args[1]**2*args[2]**2)\n",
-    "    \n",
-    "    if radicand1 >= 0:\n",
-    "        eqP1 = args[1]*args[2] * (1/2 + np.sqrt(1/4 - args[3]*args[0]/(args[4]*(args[1]**2)*(args[2]**2)))) / args[0]\n",
-    "        eqP2 = args[1]*args[2] * (1/2 - np.sqrt(1/4 - args[3]*args[0]/(args[4]*(args[1]**2)*(args[2]**2)))) / args[0]\n",
-    "    else:\n",
-    "        eqP1 = None\n",
-    "        eqP2 = None\n",
-    "    \n",
-    "    if radicand2 >= 0:\n",
-    "        eqP3 = args[1]*args[2] * (1/2 + np.sqrt(1/4 + args[3]*args[0]/(args[4]*(args[1]**2)*(args[2]**2)))) / args[0]\n",
-    "    else:\n",
-    "        eqP3 = None\n",
-    "    \n",
-    "    return [eqP1, eqP2, eqP3]\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "id": "6ba0b696-9fe2-4549-a0de-82f4104882d3",
    "metadata": {},
    "outputs": [
